DBZ-7051 Incorporated feedback suggestion

--- a/documentation/modules/ROOT/pages/connectors/jdbc.adoc
+++ b/documentation/modules/ROOT/pages/connectors/jdbc.adoc
@@ -937,7 +937,7 @@ By default, the connector uses the field name as the column name.
 
 * `snake_case` +
 * `camel_case` +
-* `upper_cae` +
+* `upper_case` +
 * `lower_case` +
 * `default` (no transformation). Optional.
 
